--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #09103f;
 }
 
 ul {
@@ -7,13 +13,19 @@ ul {
 }
 img {
   display: block;
+  height: auto;
+  max-width: 100%;
 }
 
 .gallery {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 360px);
+  justify-content: center;
+  align-content: center;
+  height: 100vh;
   gap: 24px;
 }
+
 .gallery-item {
   transition: transform 250ms ease;
 }
